[metadata]
name = tem2ng
url = https://github.com/seung-lab/tem2ng/
summary = Convert raw microscope images into a neuroglancer volume.
description-content-type = text/markdown
description-file = README.md
author = William Silversmith
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/tem2ng/
license = License :: OSI Approved :: BSD License
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = 
    tem2ng

[extras]
